--- a/main.css
+++ b/main.css
@@ -1,105 +1,83 @@
-@import url('https://fonts.cdnfonts.com/css/halfmoon');
-
-html {
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: 'Halfmoon', sans-serif;
-}
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-
-button,
-input {
-  overflow: visible;
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-}
-
-button {
-  text-transform: none;
-}
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+  background-color: rgb(244, 244, 244);
+  font-family: 'Comic Neue', cursive;
+  font-weight: bold;
 }
 
 .container {
-  margin: 50px auto;
-  max-width: 650px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 60%;
+  margin-inline: auto;
+  margin-top: 2rem;
 }
 
-.container h2 {
+.container h1 {
   text-align: center;
+  margin-bottom: 2rem;
 }
 
-form {
+#book_list {
+  border: 3px solid black;
+}
+
+#book_list li {
+  padding: 1rem;
   display: flex;
-  flex-direction: column;
-  padding: 10%;
-  border: 1px solid #000;
-  font-size: 12px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.25rem;
+}
+
+#book_list li:nth-child(even) {
+  background-color: #cecece;
+}
+
+hr {
+  width: 30%;
+  margin-inline: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+button {
+  background-color: white;
+  border: 2px solid black;
+  padding: 0.25rem 0.5rem;
+  font-size: 1.25rem;
+}
+
+button:hover {
+  cursor: pointer;
+  border: 2px solid #757575;
+  box-shadow: 0 0.5em 0.5em -0.4em #757575;
 }
 
 .inputContainer {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  padding-bottom: 10px;
+  width: 50%;
+  margin-inline: auto;
 }
 
-#submit_btn {
-  padding: 3%;
-  place-self: center;
+input {
+  border: 3px solid black;
+  padding: 0.5rem;
+  font-size: 1rem;
+  color: black;
+  margin-bottom: 2rem;
 }
 
-li {
-  list-style: none;
+.btn-add {
+  align-self: flex-end;
 }
 
-.error {
+#messageField {
   color: red;
-  font-weight: bold;
-  padding: 10px;
-}
-
-.btn-add,
-.remove-btn {
-  box-shadow: 0.1rem 0.1rem black;
+  font-size: 1.25rem;
 }
