--- a/main.css
+++ b/main.css
@@ -2,6 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+}
+
+.hidden {
+  display: none;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 body {
@@ -10,15 +20,60 @@ body {
   font-weight: bold;
 }
 
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  padding: 0 1%;
+  border: 2px solid #000;
+  margin: 5px auto;
+}
+
+.nav-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.date {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 5%;
+}
+
+main {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.nav-item {
+  display: flex;
+  cursor: pointer;
+  padding: 0 20px;
+}
+
+.nav-menu hr {
+  width: 50%;
+  transform: rotate(90deg);
+}
+
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 60%;
   margin-inline: auto;
   margin-top: 2rem;
-}
-
-.container h1 {
-  text-align: center;
-  margin-bottom: 2rem;
 }
 
 #book_list {
@@ -38,11 +93,12 @@ body {
   background-color: #cecece;
 }
 
-hr {
-  width: 30%;
-  margin-inline: auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 100%;
+  align-items: center;
 }
 
 button {
@@ -80,4 +136,11 @@ input {
 #messageField {
   color: red;
   font-size: 1.25rem;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10%;
 }
