--- a/index.css
+++ b/index.css
@@ -9,61 +9,36 @@
   display: none;
 }
 
-.flex {
-  display: flex;
-}
-
-html,
 body {
-  height: 100%;
-}
-
-body {
-  background-color: rgb(244, 244, 244);
+  background-color: #e4c988;
   font-family: 'Comic Neue', cursive;
   font-weight: bold;
-}
-
-.wrapper {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
+  padding: 1rem 2rem;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
 }
 
 nav {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
-  padding: 0 1%;
-  border: 2px solid #000;
-  margin: 5px auto;
-  flex-wrap: wrap;
-}
-
-nav h1 {
-  padding: 10px;
+  padding: 1rem;
+  border: 3px solid #8d7b68;
+  background-color: #f6e1c3;
+  color: #392e1f;
 }
 
 .nav-menu {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  padding: 5px 0;
+  flex-direction: row;
 }
 
 #current-date-time {
   display: flex;
   justify-content: flex-end;
-  padding-right: 5%;
-}
-
-main {
-  flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  color: #392e1f;
 }
 
 .nav-item {
@@ -83,17 +58,23 @@ main {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 90%;
+  width: 80%;
   margin-inline: auto;
-  margin-top: 2rem;
+  padding-top: 10%;
+}
+
+#books h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  color: #392e1f;
 }
 
 #book_list {
-  border: 3px solid black;
+  border: 3px solid #8d7b68;
   width: 100%;
+  background-color: #f6e1c3;
+  color: #392e1f;
 }
 
 #book_list li {
@@ -106,20 +87,25 @@ main {
 }
 
 #book_list li:nth-child(even) {
-  background-color: #cecece;
+  background-color: #d2b58a;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  width: 100%;
-  align-items: center;
+}
+
+#addBook h2 {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #392e1f;
 }
 
 button {
-  background-color: white;
-  border: 2px solid black;
+  background-color: #f6e1c3;
+  border: 3px solid #8d7b68;
+  color: #392e1f;
   padding: 0.25rem 0.5rem;
   font-size: 1.25rem;
 }
@@ -133,12 +119,11 @@ button:hover {
 .inputContainer {
   display: flex;
   flex-direction: column;
-  width: 50%;
-  margin-inline: auto;
 }
 
 input {
-  border: 3px solid black;
+  border: 3px solid #8d7b68;
+  background-color: #f6e1c3;
   padding: 0.5rem;
   font-size: 1rem;
   color: black;
@@ -146,34 +131,33 @@ input {
 }
 
 .btn-add {
-  align-self: flex-end;
+  align-self: flex-start;
 }
 
 #messageField {
   font-size: 1.25rem;
 }
 
-.contact {
-  flex-direction: column;
-  gap: 2rem;
-  align-items: center;
+#contact {
+  text-align: center;
 }
 
-.contact h2 {
-  font-size: 30px;
+#contact h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #392e1f;
 }
 
-.contact-list li::before {
-  content: '- ';
+#contact p {
+  font-size: 1.25rem;
+  color: #392e1f;
+  line-height: 1.8rem;
 }
 
 footer {
-  border: 3px solid black;
-  display: flex;
-  flex-direction: column;
-  width: 90%;
+  border: 3px solid #8d7b68;
   padding: 1%;
-  margin-bottom: 1%;
-  place-self: center;
   font-size: 1.25rem;
+  background-color: #f6e1c3;
+  color: #392e1f;
 }
